<resources>
    <string name="app_name">Kviz, pliz!</string>
    <string name="start">Startuj kviz</string>

    <!--Reklame-->
    <string name="smart_banner_ad_unit_id">ca-app-pub-3195045718391117/1739532785</string>
    <string name="banner_ad_unit_id">ca-app-pub-3195045718391117/4988499739</string>
    <string name="bannerInHighScores">ca-app-pub-3195045718391117/6205617675</string>

    <string name="button">Opcija 1</string>
    <string name="button2">Opcija 2</string>
    <string name="button3">Opcija 3</string>
    <string name="button4">Opcija 4</string>
    <string name="question">Pitanje</string>
    <string name="highestScore">Najbolji rezultat: %d</string>
    <string name="yourScore">Vaš rezultat: %d </string>
    <string name="newHighestScore">Novi najbolji rezultat: %d</string>
    <string name="gameCompleted">Kviz je kompletiran!</string>
    <string name="correctAnswer">Tačan odgovor! &#128578;</string>
    <string name="bestResults">Najbolji rezultati</string>
    <string name="back">Početna stranica</string>

    <!--AlertDialog-->
    <string name="gameOver">IGRA JE ZAVRŠENA</string>
    <string name="gameOverMessage">Igra je završena! Da li želite da pokušate ponovo?</string>
    <string name="end">KRAJ</string>
    <string name="tryAgain">POKUŠAJ PONOVO</string>

    <!--Problem Report-->
    <string name="reportWhat">Šta želite da prijavite?</string>
    <string name="reportDescription">Unesite opis problema</string>
    <string name="reportForm">Ukoliko ste uočili grešku u aplikaciji ili imate neki predlog, to možete prijaviti popunjavanjem forme ispod.</string>
    <string name="kontakt">E-mail</string>
    <string name="bug">Bug u aplikaciji</string>
    <string name="questionError">Grešku u pitanju</string>
    <string name="suggestion">Imam predlog</string>
    <string name="other">Drugo</string>
    <string name="sendReport">Pošaljite prijavu</string>
    <string name="reportProblem">Prijavite problem</string>
    <string name="send">Pošalji...</string>
    <string name="noEmailApp">Nemate instaliranu ni jednu aplikaciju za slanje e-maila.</string>
    <string name="installNow">INSTALIRAJTE SADA</string>
    <string name="checkConnection">Došlo je do greške. Proverite internet konekciju!</string>
    <string name="contact">Kontakt:\u00A0</string>
    <string name="msgSent">Vaša prijava je poslata!<br/>U slučaju potrebe, autor aplikacije će Vas kontaktirati putem maila koji ste ostavili.<br/>Hvala! &#128522;</string>

    <!-- AlertDialog Problem Report -->
    <string name="errorTitle">Greška</string>
    <string name="errorMessage">Molimo proverite da li ste popunili sva polja!</string>
    <string name="OK">OK</string>

    <string name="logo">Logo aplikacije Kviz, pliz!</string>
</resources>
