<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="#f8fcfb"
    tools:context=".Report_Problem"
    android:id="@+id/problemReportLayout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/problemReportView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:text="@string/reportForm"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                android:fontFamily="sans-serif-condensed"
                android:scaleType="fitCenter" />

            <TextView
                android:id="@+id/whatReportView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:layout_below="@id/problemReportView"
                android:text="@string/reportWhat"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                android:fontFamily="sans-serif-condensed"
                android:scaleType="fitCenter" />

            <RadioGroup
                android:id="@+id/reportSelector"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_below="@id/whatReportView">
                <RadioButton
                    android:id="@+id/radioBug"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bug"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="sans-serif-condensed"
                    android:buttonTint="@color/elementBackground"/>
                <RadioButton
                    android:id="@+id/radioQuestionError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/questionError"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="sans-serif-condensed"
                    android:buttonTint="@color/elementBackground" />
                <RadioButton
                    android:id="@+id/radioSuggestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/suggestion"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="sans-serif-condensed"
                    android:buttonTint="@color/elementBackground" />
                <RadioButton
                    android:id="@+id/radioOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="sans-serif-condensed"
                    android:buttonTint="@color/elementBackground" />
            </RadioGroup>

            <EditText
                android:id="@+id/problemDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:layout_below="@id/reportSelector"
                android:padding="4dp"
                android:hint="@string/reportDescription"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                android:textColorHint="#BCBFC3"
                android:fontFamily="sans-serif-condensed"
                android:autofillHints=""
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:layout_below="@id/problemDescription"
                android:padding="4dp"
                android:drawableEnd="@drawable/ic_mail"
                android:hint="@string/kontakt"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                android:textColorHint="#BCBFC3"
                android:fontFamily="sans-serif-condensed"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/btnSendReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="19dp"
                android:layout_below="@id/contact"
                android:padding="4dp"
                android:drawableEnd="@drawable/ic_send"
                android:text="@string/sendReport"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:fontFamily="sans-serif-condensed"
                android:background="@color/elementBackground" />

        </RelativeLayout>
    </ScrollView>
</LinearLayout>
